--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 ## Repo Contributors
-- Muhammad Sanni 
-- Temkin Abbass
+### Muhammad Sanni - sannysuarez4@gmail.com
+### Temkin Abbass  - akbertemkin@gmail.com
